// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dynamodb resolvers something 1`] = `
{
  "filter": {
    "expression": "#shift = :shift",
    "expressionNames": {
      "#shift": "shift",
    },
    "expressionValues": {
      ":shift": {
        "N": 10,
      },
    },
  },
  "index": "nameIndex",
  "operation": "Query",
  "query": {
    "expression": "#name = :name",
    "expressionNames": {
      "#name": "name",
    },
    "expressionValues": {
      ":name": {
        "S": "test",
      },
    },
  },
  "select": "ALL_ATTRIBUTES",
}
`;

exports[`dynamodb resolvers something 2`] = `
[
  {
    "a": 10,
  },
]
`;

exports[`rds resolvers createPgStatement-remove 1`] = `
{
  "statements": [
    "DELETE FROM "persons" WHERE "id" = :P0 RETURNING "id", "name"",
  ],
  "variableMap": {
    ":P0": "1232",
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers createPgStatement-select 1`] = `
{
  "statements": [
    "SELECT "id", "name" FROM "UserGroup" WHERE ("name" = :P0) OR ("id" > :P1) ORDER BY "name" ASC, "id" DESC",
  ],
  "variableMap": {
    ":P0": "Stephane",
    ":P1": 10,
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers createPgStatement-typeHint 1`] = `
{
  "statements": [
    "SELECT * FROM "UserGroup" WHERE ("id" = :P0) AND ("started" < :P1)",
  ],
  "variableMap": {
    ":P0": "1232",
    ":P1": "2024-01-31 11:54:36",
  },
  "variableTypeHintMap": {
    ":P0": "UUID",
    ":P1": "TIMESTAMP",
  },
}
`;

exports[`rds resolvers toJsonObject 1`] = `
[
  [
    {
      "ISBN-13": "978-1948132817",
      "author": "Mark Twain",
      "title": "Adventures of Huckleberry Finn",
    },
    {
      "ISBN-13": "978-1948132275",
      "author": "Jack London",
      "title": "The Call of the Wild",
    },
  ],
]
`;

exports[`rds resolvers typehints TIMESTAMP 1`] = `
{
  "type": "TIMESTAMP",
  "value": "2023-02-01T00:00:00.000Z",
}
`;

exports[`rds resolvers typehints UUID 1`] = `
{
  "type": "UUID",
  "value": "abc123",
}
`;
